--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==2.0.6
 django-cors-headers==3.1.1
 django-rest-swagger==2.2.0
-jangorestframework==3.9.3
+djangorestframework==3.9.3
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.6.0
 drf-yasg==1.17.0
